[RIPSoftimage] clean code

--- a/Application/Plugins/CMakeLists.txt
+++ b/Application/Plugins/CMakeLists.txt
@@ -149,3 +149,4 @@ set (ADDITIONAL_LIBRARIES Comctl32)
 add_subdirectory (UsdRead)
 add_subdirectory (UsdWrite)
 add_subdirectory (IceRig)
+add_subdirectory (SynthNode)
