--- a/Application/Plugins/CMakeLists.txt
+++ b/Application/Plugins/CMakeLists.txt
@@ -150,3 +150,5 @@ add_subdirectory (UsdRead)
 add_subdirectory (UsdWrite)
 add_subdirectory (IceRig)
 add_subdirectory (SynthNode)
+add_subdirectory (Triangulate)
+add_subdirectory (Voronoi)
