[Softimage] remove build folder

--- a/Application/Plugins/CMakeLists.txt
+++ b/Application/Plugins/CMakeLists.txt
@@ -26,35 +26,35 @@ endif()
 set(USD_INCLUDE_DIR "${USD_DIR}/include")
 set(USD_LIBRARY_DIR "${USD_DIR}/lib")
 list(APPEND USD_LIB_NAMES 
-  trace
-  work
-  arch
-  ar
-  gf
-  glf
-  tf
-  sdf
-  plug
-  garch
-  ndr
-  sdr
-  sdf
-  pcp
-  usd
-  hd
-  hdSt
-  hdx
-  hgi
-  hf
-  hio
-  usdGeom
-  usdLux
-  usdShade
-  usdUI
-  usdImaging
-  usdImagingGL
-  usdAnimX
-  vt
+  usd_vt
+  usd_trace
+  usd_work
+  usd_arch
+  usd_ar
+  usd_gf
+  usd_glf
+  usd_tf
+  usd_sdf
+  usd_plug
+  usd_garch
+  usd_ndr
+  usd_sdr
+  usd_sdf
+  usd_pcp
+  usd_usd
+  usd_hd
+  usd_hdSt
+  usd_hdx
+  usd_hgi
+  usd_hf
+  usd_hio
+  usd_usdGeom
+  usd_usdLux
+  usd_usdShade
+  usd_usdUI
+  usd_usdImaging
+  usd_usdImagingGL
+  usd_usdAnimX
 )
 
 set(USD_LIBRARIES "")
