--- a/Application/Plugins/UsdWrite/CMakeLists.txt
+++ b/Application/Plugins/UsdWrite/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(${TARGET} SHARED
   mesh.cpp
   curve.cpp
   instancer.cpp
+  subset.cpp
   skeleton.cpp
   plugin.cpp
   scene.cpp
@@ -28,7 +29,7 @@ target_include_directories(${TARGET}
   PUBLIC
 	${SOFTIMAGE_INCLUDE_DIR}
     ${USD_INCLUDE_DIR}
-    ${Python2_INCLUDE_DIRS}
+    ${Python3_INCLUDE_DIRS}
     ${TBB_INCLUDE_DIR}
 	${BOOST_INCLUDE_DIR}
 )
@@ -36,7 +37,7 @@ target_include_directories(${TARGET}
 target_link_libraries(${TARGET}
   ${SOFTIMAGE_LIBRARIES}
   ${OPENGL_LIBRARY}
-  ${Python2_LIBRARIES}
+  ${Python3_LIBRARIES}
   ${BOOST_LIBRARIES}
   ${USD_LIBRARIES}
   ${TBB_LIBRARIES}
