[UsdRead] fix menu not building on start

--- a/Application/Plugins/UsdRead/CMakeLists.txt
+++ b/Application/Plugins/UsdRead/CMakeLists.txt
@@ -5,6 +5,7 @@ add_definitions(
   -DNOMINMAX
   -DIMGUI_IMPL_OPENGL_LOADER_CUSTOM="${USD_INCLUDE_DIR}/pxr/imaging/garch/glApi.h"
   -DUSDHYDRACALLBACK_EXPORTS
+  -DUSDEXPLORER_EXPORTS
 )
 
 add_library(${TARGET} SHARED
